--- a/contact/index.html
+++ b/contact/index.html
@@ -54,7 +54,7 @@
 
                 <div class="s-header__block">
                     <div class="s-header__logo">
-                        <a class="logo" href="ethansheffield.com">
+                        <a class="logo" href="https://ethansheffield.com">
                         </a>
                     </div>
 
@@ -64,7 +64,7 @@
                 <nav class="s-header__nav">
     
                     <ul class="s-header__menu-links">
-                        <li><a href="ethansheffield.com">Home</a></li>
+                        <li><a href="https://ethansheffield.com">Home</a></li>
                         <li><a href="/about/">About</a></li>
                         <li><a href="/tech/">Tech</a></li>
                         <li><a href="/blog/">Journal</a></li>
@@ -110,7 +110,7 @@
                                     outstanding results together. Let's make something amazing happen!
                                     </p>
         
-                                    <a href="mailto:#0" class="btn btn--primary u-fullwidth contact-btn">
+                                    <a href="mailto:ethansheffie@gmail.com" class="btn btn--primary u-fullwidth contact-btn">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M20 4H4c-1.103 0-2 .897-2 2v12c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V6c0-1.103-.897-2-2-2zm0 2v.511l-8 6.223-8-6.222V6h16zM4 18V9.044l7.386 5.745a.994.994 0 0 0 1.228 0L20 9.044 20.002 18H4z"></path></svg>
                                         Send Me An Email
                                     </a>
@@ -172,14 +172,6 @@
                                         <a href="mailto:#0">ethansheffie@gmail.com</a>
                                     </div>
 
-                                    <!-- <div class="contact-block">
-                                        <h6>Phone</h6>
-                                        <ul class="contact-list">
-                                            <li><a href="tel:197-543-2345">+197 543 2345</a></li>
-                                            <li><a href="tel:197-123-9876">+197 123 9876</a></li>
-                                        </ul>
-                                    </div> -->
-
                                 </div>
                             </div>
                         </div>                        
@@ -203,7 +195,7 @@
                 <div class="column xl-3 lg-6 md-12 s-footer__block s-footer__site-links">
                     <h3>Site Links</h3>
                     <ul class="link-list">
-                        <li><a href="ethansheffield.com">Home</a></li>
+                        <li><a href="https://https://ethansheffield.com">Home</a></li>
                         <li><a href="/tech/">Tech</a></li>
                         <li><a href="/blog/">Journal</a></li>
                         <li><a href="/about/">About</a></li>
