--- a/text-editor-setup/index.html
+++ b/text-editor-setup/index.html
@@ -55,8 +55,8 @@
 
                 <div class="s-header__block">
                     <div class="s-header__logo">
-                        <a class="logo" href="ethansheffield.com">
-                            <img src="/images/logo.svg" alt="Homepage">
+                        <a class="logo" href="https://ethansheffield.com">
+                            <!-- <img src="/images/logo.svg" alt="Homepage"> -->
                         </a>
                     </div>
 
@@ -331,7 +331,7 @@
                 <div class="column xl-3 lg-6 md-12 s-footer__block s-footer__site-links">
                     <h3>Site Links</h3>
                     <ul class="link-list">
-                        <li><a href="/index/">Home</a></li>
+                        <li><a href="https://ethansheffield.com">Home</a></li>
                         <li><a href="/tech/">Tech</a></li>
                         <li><a href="/blog/">Journal</a></li>
                         <li><a href="/about/">About</a></li>
